fix: updating button styles to show correct SVG icon size on mobile
Safari mobile was showing SVG icons in buttons with incorrect height (too tall)

--- a/modules/ept-frontend/client/scss/ept/global/_buttons.scss
+++ b/modules/ept-frontend/client/scss/ept/global/_buttons.scss
@@ -117,7 +117,7 @@ button.icon {
 
 svg {
   width: 1rem;
-  height: auto;
+  height: 100%;
   fill: $secondary-font-color;
 
   &:hover {
